@@ -44,5 +44,11 @@ override_dh_fixperms:
 	    chown www-data:www-data debian/libwebkdc-perl/var/cache/weblogin; \
 	fi
 
+# libapache2-mod-webauth has modules with directives with no default that
+# must be set, so we can't unconditionally enable them in postinst.
+override_dh_apache2:
+	dh_apache2 -plibapache2-mod-webauth -n
+	dh_apache2 -Nlibapache2-mod-webauth
+
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
