@@ -23,8 +23,11 @@ webauth (4.2.0-1) UNRELEASED; urgency=low
     - Rename libapache2-webauth to libapache2-mod-webauth and
       libapache2-webkdc to libapache2-mod-webkdc.  Add transitional
       packages to ease the upgrade.
-    - Use dh_apache2 to handle module and configuration installation and
-      maintainer script actions.
+    - Use dh_apache2 to handle module and configuration installation, and
+      maintainer script actions for libapache2-mod-webkdc.  Update the
+      actions for libapache2-mod-webauth for the new Apache module policy.
+      dh_apache2 cannot be used for libapache2-mod-webauth because the
+      modules have required directives with no reasonable default value.
     - Depend on apache2-dev instead of apache2-threaded-dev.
     - Remove explicit dependencies on apache2.2-common.
     - Use apxs, not apxs2.
